--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "mysql": "^2.16.0",
-    "save": "^2.3.3"
+    "mysql": "^2.16.0"
+   
   }
 }
